# refactoo

./: .gitignore  README.md  flake.nix  pyproject.toml
refactoo/: cmd_refactoo.py  refactor_const.py  refactor_include_guards.py  refactor_log.py
tests/: test_refactor_const.py  test_refactor_log.py
